--- a/package.json
+++ b/package.json
@@ -14,12 +14,20 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.10.0",
     "@neondatabase/serverless": "^1.0.1",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@simplewebauthn/browser": "^9.0.1",
+    "@simplewebauthn/server": "^9.0.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
+    "lucide-react": "^0.540.0",
     "next": "15.5.0",
+    "next-auth": "^5.0.0-beta.29",
     "postgres": "^3.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1",
     "ws": "^8.18.3",
     "zod": "^4.0.17"
   },
@@ -41,6 +49,7 @@
     "jsdom": "^26.1.0",
     "tailwindcss": "^4",
     "tsx": "^4.20.4",
+    "tw-animate-css": "^1.3.7",
     "typescript": "^5",
     "vite-tsconfig-paths": "^5.1.4",
     "vitest": "^3.2.4"
